# WEBOASIS_A-_WEB_CRAWLER

./: CMakeLists.txt  README.md  bingimage.cpp  bingimage.h  bingtext.cpp  bingtext.h  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wikipedia.cpp  wikipedia.h
